Corrected margins for display area

--- a/app.css
+++ b/app.css
@@ -48,6 +48,5 @@ body{
     background-color: lemonchiffon;
     /* padding-top: 20px; */
     border-radius: 20px;
-    margin-bottom: 20px;
-    margin-top: 15px;
+    margin: 20px 20px 20px 20px;
 }
