--- a/app.css
+++ b/app.css
@@ -1,11 +1,15 @@
 /* app css stylesheet */
 body{
-  background: #663300;
+  background: #608E5E;
 }
 
 .well {
-	background: #cc9900;
-	border: #663300;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    margin-right: 5%;
+    margin-left: 5%;
+    background: #333;
+    border: #b9b9b9;
 }
 
 .menu {
@@ -13,6 +17,19 @@ body{
   border-bottom: 0.1em solid black;
   margin-bottom: 2em;
   padding: 0 0 0.5em;
+}
+
+.navbar-brand {
+	font-family: 'Sigmar One', cursive;
+    font-size: xx-large;
+    color: #5CB85C;
+    padding-top: 2%;
+}
+
+.desubmit{
+	text-align: center;
+    padding-top: 1.5%;
+    padding-bottom: .5%;
 }
 
 .menu:before {
@@ -45,7 +62,7 @@ body{
 
 .display {
     height: 200px;
-    background-color: lemonchiffon;
+    background-color: rgba(255,255,255,.15);
     /* padding-top: 20px; */
     border-radius: 20px;
     width: 95%;
@@ -53,7 +70,11 @@ body{
     margin-bottom: 25px;
     margin-top: 10px;
     padding-top: 5%;
+    padding-bottom: 15%;
     text-align: center;
+    font-family: 'Sigmar One', cursive;
+    font-size: x-large;
+    color: #5CB85C;
 }
 
 .results {
@@ -101,6 +122,171 @@ body{
     box-shadow: none;
   }
 
+
+.footer-distributed{
+	background-color: #292c2f;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: bold 16px sans-serif;
+
+	padding: 55px 50px;
+	margin-top: 80px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* Footer left */
+
+.footer-distributed .footer-left{
+	width: 40%;
+}
+
+/*  logo */
+
+.footer-distributed h3{
+	color:  #ffffff;
+	font: normal 36px 'Sigmar One', cursive;
+	margin: 0;
+}
+
+.footer-distributed h3 span{
+	color:  #5CB85C;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+	color:  #ffffff;
+	margin: 20px 0 12px;
+	padding: 0;
+}
+
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+	text-decoration: none;
+	color:  inherit;
+}
+
+.footer-distributed .footer-company-name{
+	color:  #8f9296;
+	font-size: 14px;
+	font-weight: normal;
+	margin: 0;
+}
+
+/* Footer Center */
+
+.footer-distributed .footer-center{
+	width: 35%;
+}
+
+.footer-distributed .footer-center i{
+	background-color:  #33383b;
+	color: #ffffff;
+	font-size: 25px;
+	width: 38px;
+	height: 38px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 42px;
+	margin: 10px 15px;
+	vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope{
+	font-size: 17px;
+	line-height: 38px;
+}
+
+.footer-distributed .footer-center p{
+	display: inline-block;
+	color: #ffffff;
+	vertical-align: middle;
+	margin:0;
+}
+
+.footer-distributed .footer-center p span{
+	display:block;
+	font-weight: normal;
+	font-size:14px;
+	line-height:2;
+}
+
+.footer-distributed .footer-center p a{
+	color:  #5383d3;
+	text-decoration: none;;
+}
+
+
+.footer-distributed .footer-right{
+	width: 20%;
+}
+
+.footer-distributed .footer-company-about{
+	line-height: 20px;
+	color:  #92999f;
+	font-size: 13px;
+	font-weight: normal;
+	margin: 0;
+}
+
+.footer-distributed .footer-company-about span{
+	display: block;
+	color:  #ffffff;
+	font-size: 14px;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+
+.footer-distributed .footer-icons{
+	margin-top: 25px;
+}
+
+.footer-distributed .footer-icons a{
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	cursor: pointer;
+	background-color:  #33383b;
+	border-radius: 2px;
+
+	font-size: 20px;
+	color: #ffffff;
+	text-align: center;
+	line-height: 35px;
+
+	margin-right: 3px;
+	margin-bottom: 5px;
+}
+
+@media (max-width: 880px) {
+
+	.footer-distributed{
+		font: bold 14px sans-serif;
+	}
+
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-center,
+	.footer-distributed .footer-right{
+		display: block;
+		width: 100%;
+		margin-bottom: 40px;
+		text-align: center;
+	}
+
+	.footer-distributed .footer-center i{
+		margin-left: 0;
+	}
+
+}
 
 
 
