--- a/app.css
+++ b/app.css
@@ -285,6 +285,27 @@ body{
 	.footer-distributed .footer-center i{
 		margin-left: 0;
 	}
+	
+		.display {
+    height: 220px;
+    background-color: rgba(255,255,255,.15);
+    /* padding-top: 20px; */
+    border-radius: 20px;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-bottom: 25px;
+    margin-top: 10px;
+    padding-top: 5%;
+    padding-bottom: 15%;
+    text-align: center;
+    font-family: 'Sigmar One', cursive;
+    font-size: large;
+    color: #5CB85C;
+	}
+	
+	.results {
+		font-size: small;
+	}
 
 }
 
